feat: upgrade to storybook 8

--- a/packages/ibm-products/scripts/generate/templates/DISPLAY_NAME.mdx
+++ b/packages/ibm-products/scripts/generate/templates/DISPLAY_NAME.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DISPLAY_NAME } from '.';
 import * as stories from './DISPLAY_NAME.stories';
@@ -29,4 +29,4 @@ import * as stories from './DISPLAY_NAME.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
