--- a/packages/ibm-products/src/components/Checklist/Checklist.mdx
+++ b/packages/ibm-products/src/components/Checklist/Checklist.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Checklist } from '.';
 import * as CheckListStories from './Checklist.stories';
@@ -38,4 +38,4 @@ explain, educate, and cultivate novice users into high-functioning power users.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
