--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas, Meta } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas, Meta } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Coachmark, CoachmarkFixed } from '..';
 import * as CoachmarkStories from './Coachmark.stories';
@@ -106,4 +106,4 @@ to display properly within your usage.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
