--- a/packages/ibm-products/src/components/CoachmarkButton/CoachmarkButton.mdx
+++ b/packages/ibm-products/src/components/CoachmarkButton/CoachmarkButton.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkButton } from '.';
 import * as CoachmarkButtonStories from './CoachmarkButton.stories';
@@ -50,4 +50,4 @@ variant.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
