--- a/packages/ibm-products/src/components/CoachmarkFixed/CoachmarkFixed.mdx
+++ b/packages/ibm-products/src/components/CoachmarkFixed/CoachmarkFixed.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkFixed } from '.';
 import * as CoachmarkFixedStories from './CoachmarkFixed.stories';
@@ -45,4 +45,4 @@ _(See bottom right)_
 
 ## Component API
 
-<ArgsTable />
+<Controls />
