--- a/packages/ibm-products/src/components/CoachmarkOverlayElement/CoachmarkOverlayElement.mdx
+++ b/packages/ibm-products/src/components/CoachmarkOverlayElement/CoachmarkOverlayElement.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkOverlayElement } from '.';
 import * as CoachmarkOverlayElementStories from './CoachmarkOverlayElement.stories';
@@ -73,4 +73,4 @@ Coachmark/CoachmarkFixed/CoachmarkStack components.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
