--- a/packages/ibm-products/src/components/DelimitedList/DelimitedList.mdx
+++ b/packages/ibm-products/src/components/DelimitedList/DelimitedList.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DelimitedList } from '.';
 import * as DelimitedListStories from './DelimitedList.stories';
@@ -29,4 +29,4 @@ import * as DelimitedListStories from './DelimitedList.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
