--- a/packages/ibm-products/src/components/DescriptionList/DescriptionList.mdx
+++ b/packages/ibm-products/src/components/DescriptionList/DescriptionList.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DescriptionList } from '.';
 import * as DescriptionListStories from './DescriptionList.stories';
@@ -25,4 +25,4 @@ Type layouts provide an orderly layout of terms and definitions.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
