--- a/packages/ibm-products/src/components/ExpressiveCard/ExpressiveCard.mdx
+++ b/packages/ibm-products/src/components/ExpressiveCard/ExpressiveCard.mdx
@@ -1,6 +1,6 @@
 {/* <!-- `position:fixed` cause rendering issues, so do not render the modal --> */}
 
-import { Story, ArgsTable, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs';
 import { ExpressiveCard } from '.';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import * as ExpressiveCardStories from './ExpressiveCard.stories';
@@ -26,4 +26,4 @@ match. For information on each implementation please refer to the
 
 ## Component API
 
-<ArgsTable />
+<Controls />
