--- a/packages/ibm-products/src/components/FilterPanel/FilterPanel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanel.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { FilterPanel } from '.';
 import * as FilterPanelStories from './FilterPanel.stories';
@@ -23,4 +23,4 @@ The `FilterPanel` is the container for its subcomponents.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
