--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelLabel } from '.';
 import * as FilterPanelLabelStories from './FilterPanelLabel.stories';
@@ -21,4 +21,4 @@ import * as FilterPanelLabelStories from './FilterPanelLabel.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
