--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelSearch/FilterPanelSearch.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelSearch/FilterPanelSearch.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelSearch } from '.';
 import * as FilterPanelSearchStories from './FilterPanelSearch.stories';
@@ -23,4 +23,4 @@ The `FilterPanelSearch` returns the value when the search value changes.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
