--- a/packages/ibm-products/src/components/NotificationsPanel/NotificationsPanel.mdx
+++ b/packages/ibm-products/src/components/NotificationsPanel/NotificationsPanel.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { NotificationsPanel } from '.';
 import * as stories from './NotificationsPanel.stories';
@@ -28,4 +28,4 @@ See notification bell in global header above for interaction.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
