--- a/packages/ibm-products/src/components/OptionsTile/OptionsTile-unused-v1.mdx
+++ b/packages/ibm-products/src/components/OptionsTile/OptionsTile-unused-v1.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { OptionsTile } from '.';
 import * as stories from './OptionsTile.stories';
 
@@ -31,4 +31,4 @@ set of features with ease.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
