--- a/packages/ibm-products/src/components/Saving/Saving.mdx
+++ b/packages/ibm-products/src/components/Saving/Saving.mdx
@@ -1,6 +1,6 @@
 {/* <!-- `position:fixed` cause rendering issues, so do not render the modal --> */}
 
-import { Story, ArgsTable, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs';
 import { Saving } from '.';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import * as stories from './Saving.stories';
@@ -27,4 +27,4 @@ import * as stories from './Saving.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
