--- a/packages/ibm-products/src/components/ScrollGradient/ScrollGradient.mdx
+++ b/packages/ibm-products/src/components/ScrollGradient/ScrollGradient.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas, Meta } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas, Meta } from '@storybook/addon-docs';
 import { ScrollGradient } from '.';
 import * as ScrollGradientStories from './ScrollGradient.stories';
 
@@ -34,4 +34,4 @@ more content that can be scrolled to.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
