--- a/packages/ibm-products/src/components/SidePanel/SidePanel.mdx
+++ b/packages/ibm-products/src/components/SidePanel/SidePanel.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { SidePanel } from '.';
 import * as stories from './SidePanel.stories';
@@ -31,4 +31,4 @@ within them.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
