--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { TagOverflow } from '.';
 import * as TagOverflowStories from './TagOverflow.stories';
@@ -63,4 +63,4 @@ tags associated with the object.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
