--- a/packages/ibm-products/src/components/TagSet/TagSet.mdx
+++ b/packages/ibm-products/src/components/TagSet/TagSet.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { TagSet } from '.';
 import * as stories from './TagSet.stories';
@@ -46,4 +46,4 @@ display all tags.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
