--- a/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
+++ b/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { UserAvatar } from '.';
 import * as UserAvatarStories from './UserAvatar.stories';
@@ -37,4 +37,4 @@ import * as UserAvatarStories from './UserAvatar.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
