--- a/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
+++ b/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { BigNumbers } from '.';
 import * as BigNumbersStories from './BigNumbers.stories';
@@ -45,4 +45,4 @@ of a button as well as tool tip functionality. The default locale is English
 
 ## Component API
 
-<ArgsTable />
+<Controls />
