--- a/packages/ibm-products/src/components/ButtonMenu/ButtonMenu.mdx
+++ b/packages/ibm-products/src/components/ButtonMenu/ButtonMenu.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { ButtonMenu } from '.';
 import * as ButtonMenuStories from './ButtonMenu.stories';
 
@@ -24,4 +24,4 @@ import * as ButtonMenuStories from './ButtonMenu.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
