--- a/packages/ibm-products/src/components/CoachmarkBeacon/CoachmarkBeacon.mdx
+++ b/packages/ibm-products/src/components/CoachmarkBeacon/CoachmarkBeacon.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkBeacon } from '.';
 import * as CoachmarkBeaconStories from './CoachmarkBeacon.stories';
@@ -54,4 +54,4 @@ one of two states, animated or active.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
