--- a/packages/ibm-products/src/components/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
+++ b/packages/ibm-products/src/components/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkOverlayElements } from '.';
 import * as CoachmarkOverlayElementsStories from './CoachmarkOverlayElements.stories';
@@ -67,4 +67,4 @@ CoachmarkStack components.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
