--- a/packages/ibm-products/src/components/CoachmarkStack/CoachmarkStack.mdx
+++ b/packages/ibm-products/src/components/CoachmarkStack/CoachmarkStack.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkStack } from '.';
 import * as CoachmarkStackStories from './CoachmarkStack.stories';
@@ -50,4 +50,4 @@ _(See bottom right)_
 
 ## Component API
 
-<ArgsTable />
+<Controls />
