--- a/packages/ibm-products/src/components/Datagrid/Datagrid.mdx
+++ b/packages/ibm-products/src/components/Datagrid/Datagrid.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Datagrid } from '.';
 import datagridActionsExample from './storybook-assets/datagrid-actions-example.png';
@@ -1293,4 +1293,4 @@ return <Datagrid datagridState={datagridState} />;
 
 ## Component API
 
-<ArgsTable />
+<Controls />
