--- a/packages/ibm-products/src/components/Decorator/Decorator.mdx
+++ b/packages/ibm-products/src/components/Decorator/Decorator.mdx
@@ -1,5 +1,5 @@
 {/* cspell:ignore setlabeltitle */}
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Decorator } from '.';
 import * as DecoratorStories from './Decorator.stories';
@@ -32,4 +32,4 @@ interactive.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
