--- a/packages/ibm-products/src/components/DecoratorBase/DecoratorBase.mdx
+++ b/packages/ibm-products/src/components/DecoratorBase/DecoratorBase.mdx
@@ -1,5 +1,5 @@
 {/* cspell:ignore setlabeltitle */}
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import {
   getStoryId,
   CodesandboxLink,
@@ -42,4 +42,4 @@ setLabelTitle: (score, scoreThresholds, magnitude) => {
 
 ## Component API
 
-<ArgsTable />
+<Controls />
