--- a/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
+++ b/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import * as stories from './DragAndDrop.stories';
 
