--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordion/FilterPanelAccordion.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordion/FilterPanelAccordion.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelAccordion } from '.';
 import * as FilterPanelAccordionStories from './FilterPanelAccordion.stories';
@@ -24,4 +24,4 @@ The `FilterPanelAccordion` is a container required for grouping
 
 ## Component API
 
-<ArgsTable />
+<Controls />
