--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordionItem/FilterPanelAccordionItem.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordionItem/FilterPanelAccordionItem.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelAccordionItem } from '..';
 import * as FilterPanelAccordionItemStories from './FilterPanelAccordionItem.stories';
@@ -32,4 +32,4 @@ number of `children`. The `children` will be formatted as part of an internal
 
 ## Component API
 
-<ArgsTable />
+<Controls />
