--- a/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
+++ b/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { FullPageError } from '.';
 import * as stories from './FullPageError.stories';
@@ -59,4 +59,4 @@ broken links.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
