--- a/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { InterstitialScreenView } from '.';
 import * as stories from './InterstitialScreenView.stories';
@@ -43,4 +43,4 @@ explain, educate, and cultivate novice users into high-functioning power users.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
