--- a/packages/ibm-products/src/components/InterstitialScreenViewModule/InterstitialScreenViewModule.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenViewModule/InterstitialScreenViewModule.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { InterstitialScreenViewModule } from '.';
 import * as stories from './InterstitialScreenViewModule.stories';
@@ -41,4 +41,4 @@ explain, educate, and cultivate novice users into high-functioning power users.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
