--- a/packages/ibm-products/src/components/Nav/Nav.mdx
+++ b/packages/ibm-products/src/components/Nav/Nav.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Nav } from '.';
 import * as NavStories from './Nav.stories';
@@ -29,4 +29,4 @@ import * as NavStories from './Nav.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
