--- a/packages/ibm-products/src/components/PageHeader/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/PageHeader.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { PageHeader } from '.';
 import * as stories from './PageHeader.stories';
@@ -178,4 +178,4 @@ header. **This is just an example of an allowable zone for content.**
 
 ## Component API
 
-<ArgsTable />
+<Controls />
