--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { StatusIndicator } from '.';
 import * as StatusIndicatorStories from './StatusIndicator.stories';
@@ -20,4 +20,4 @@ import * as StatusIndicatorStories from './StatusIndicator.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
