--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { StatusIndicatorStep } from '.';
 import * as StatusIndicatorStepStories from './StatusIndicatorStep.stories';
@@ -20,4 +20,4 @@ import * as StatusIndicatorStepStories from './StatusIndicatorStep.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
