--- a/packages/ibm-products/src/components/StringFormatter/StringFormatter.mdx
+++ b/packages/ibm-products/src/components/StringFormatter/StringFormatter.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { StringFormatter } from '.';
 import * as StringFormatterStories from './StringFormatter.stories';
@@ -37,4 +37,4 @@ hover or focus with the entirety of the provided copy.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
