--- a/packages/ibm-products/src/components/Tearsheet/Tearsheet.mdx
+++ b/packages/ibm-products/src/components/Tearsheet/Tearsheet.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Tearsheet, TearsheetNarrow } from '.';
 import * as TearsheetStories from './Tearsheet.stories';
@@ -57,4 +57,4 @@ Tearsheets may be stacked up to 3 levels deep.
 
 ## Component API
 
-<ArgsTable />
+<Controls />
