--- a/packages/ibm-products/src/components/TruncatedList/TruncatedList.mdx
+++ b/packages/ibm-products/src/components/TruncatedList/TruncatedList.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { TruncatedList } from '.';
 import * as stories from './TruncatedList.stories';
@@ -29,4 +29,4 @@ import * as stories from './TruncatedList.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
