fix(getStarted): mobile and step to sequence

--- a/packages/ibm-products/src/components/GetStarted/GetStarted.mdx
+++ b/packages/ibm-products/src/components/GetStarted/GetStarted.mdx
@@ -25,10 +25,10 @@ import * as stories from './GetStarted.stories';
   <Story of={stories.withPictogram} />
 </Canvas>
 
-### with Step
+### with Sequence
 
 <Canvas>
-  <Story of={stories.withStep} />
+  <Story of={stories.withSequence} />
 </Canvas>
 
 ### with Media and Pictogram
@@ -37,10 +37,10 @@ import * as stories from './GetStarted.stories';
   <Story of={stories.withMediaAndPictogram} />
 </Canvas>
 
-### with Media and Step
+### with Media and Sequence
 
 <Canvas>
-  <Story of={stories.withMediaAndStep} />
+  <Story of={stories.withMediaAndSequence} />
 </Canvas>
 
 ## Code sample
