--- a/packages/ibm-products/src/components/Decorator/Decorator.mdx
+++ b/packages/ibm-products/src/components/Decorator/Decorator.mdx
@@ -1,8 +1,7 @@
-{/* cspell:ignore setlabeltitle */}
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import { CodesandboxLink } from '../../global/js/utils/story-helper';
-import { Decorator } from '.';
-import * as DecoratorStories from './Decorator.stories';
+{/* cspell:ignore setlabeltitle */} import { Story, ArgsTable, Source, Canvas }
+from '@storybook/addon-docs'; import { CodesandboxLink } from
+'../../global/js/utils/story-helper'; import { Decorator } from '.'; import \*
+as DecoratorStories from './Decorator.stories';
 
 # Decorator
 
