--- a/packages/ibm-products/src/components/DecoratorBase/DecoratorBase.mdx
+++ b/packages/ibm-products/src/components/DecoratorBase/DecoratorBase.mdx
@@ -1,11 +1,7 @@
-{/* cspell:ignore setlabeltitle */}
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
-import { DecoratorBase } from '.';
-import * as DecoratorBaseStories from './DecoratorBase.stories';
+{/* cspell:ignore setlabeltitle */} import { Story, ArgsTable, Source, Canvas }
+from '@storybook/addon-docs'; import { getStoryId, CodesandboxLink, } from
+'../../global/js/utils/story-helper'; import { DecoratorBase } from '.';
+import \* as DecoratorBaseStories from './DecoratorBase.stories';
 
 # DecoratorBase
 
