--- a/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
@@ -1,8 +1,11 @@
-{/* cspell:ignore setlabeltitle */} import { Story, ArgsTable, Source, Canvas }
-from '@storybook/addon-docs'; import { getStoryId, CodesandboxLink, } from
-'../../global/js/utils/story-helper'; import { DecoratorSingleButton } from '.';
-import \* as DecoratorSingleButtonStories from
-'./DecoratorSingleButton.stories';
+{/* cspell:ignore setlabeltitle */}
+import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import {
+  getStoryId,
+  CodesandboxLink,
+} from '../../global/js/utils/story-helper';
+import { DecoratorSingleButton } from '.';
+import * as DecoratorSingleButtonStories from './DecoratorSingleButton.stories';
 
 # DecoratorSingleButton
 
