--- a/packages/ibm-products/src/components/DecoratorDualButton/DecoratorDualButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorDualButton/DecoratorDualButton.mdx
@@ -1,7 +1,11 @@
-{/* cspell:ignore setlabeltitle */} import { Story, ArgsTable, Source, Canvas }
-from '@storybook/addon-docs'; import { getStoryId, CodesandboxLink, } from
-'../../global/js/utils/story-helper'; import { DecoratorDualButton } from '.';
-import \* as DecoratorDualButtonStories from './DecoratorDualButton.stories';
+{/* cspell:ignore setlabeltitle */}
+import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import {
+  getStoryId,
+  CodesandboxLink,
+} from '../../global/js/utils/story-helper';
+import { DecoratorDualButton } from '.';
+import * as DecoratorDualButtonStories from './DecoratorDualButton.stories';
 
 # DecoratorDualButton
 
