--- a/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
+++ b/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
@@ -1,7 +1,11 @@
-{/* cspell:ignore setlabeltitle */} import { Story, ArgsTable, Source, Canvas }
-from '@storybook/addon-docs'; import { getStoryId, CodesandboxLink, } from
-'../../global/js/utils/story-helper'; import { DecoratorLink } from '.';
-import \* as DecoratorLinkStories from './DecoratorLink.stories';
+{/* cspell:ignore setlabeltitle */}
+import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
+import {
+  getStoryId,
+  CodesandboxLink,
+} from '../../global/js/utils/story-helper';
+import { DecoratorLink } from '.';
+import * as DecoratorLinkStories from './DecoratorLink.stories';
 
 # DecoratorLink
 
