fix(get-started): use controls not argstable

--- a/packages/ibm-products/src/components/GetStarted/GetStarted.mdx
+++ b/packages/ibm-products/src/components/GetStarted/GetStarted.mdx
@@ -1,4 +1,4 @@
-import { Story, ArgsTable, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { GetStarted } from '.';
 import * as stories from './GetStarted.stories';
@@ -43,4 +43,4 @@ import * as stories from './GetStarted.stories';
 
 ## Component API
 
-<ArgsTable />
+<Controls />
