fix(get-started): add card to name

--- a/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
+++ b/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
@@ -1,9 +1,9 @@
 import { Story, Controls, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
-import { GetStarted } from '.';
-import * as stories from './GetStarted.stories';
+import { GetStartedCard } from '.';
+import * as stories from './GetStartedCard.stories';
 
-# GetStarted
+# GetStartedCard
 
 ## Table of Contents
 
@@ -39,7 +39,7 @@ import * as stories from './GetStarted.stories';
 
 ## Code sample
 
-<CodesandboxLink exampleDirectory="GetStarted" />
+<CodesandboxLink exampleDirectory="GetStartedCard" />
 
 ## Component API
 
