chore(feature-flags): rename to match carbon naming patterns

--- a/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
+++ b/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
@@ -16,9 +16,9 @@ any future feature flags will be updated within this table.
 | Flag                                       | Description                                                              | Default |
 | ------------------------------------------ | ------------------------------------------------------------------------ | ------- |
 | `default-portal-target-body`               | Enable the default portal target to be the document's body               | `true`  |
-| `Datagrid.useInlineEdit`                   | Enable the Datagrid `useInlineEdit` extension                            | `false` |
-| `Datagrid.useEditableCell`                 | Enable the Datagrid `useEditableCell` extension                          | `false` |
-| `Datagrid.useCustomizeColumns`             | Enable the Datagrid `useCustomizeColumns` extension                      | `false` |
+| `enable-datagrid-useInlineEdit`            | Enable the Datagrid `useInlineEdit` extension                            | `false` |
+| `enable-datagrid-useEditableCell`          | Enable the Datagrid `useEditableCell` extension                          | `false` |
+| `enable-datagrid-useCustomizeColumns`      | Enable the Datagrid `useCustomizeColumns` extension                      | `false` |
 
 ## Turning on feature flags in Javascript/react
 
