fix(checklist): typo

--- a/packages/ibm-products/src/components/Checklist/Checklist.mdx
+++ b/packages/ibm-products/src/components/Checklist/Checklist.mdx
@@ -8,7 +8,7 @@ import * as CheckListStories from './Checklist.stories';
 ## Table of Contents
 
 - [Overview](#overview)
-- [About Onboarding](#about-oboarding)
+- [About Onboarding](#about-onboarding)
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
