chore(FullPageError): add docs and fix example

--- a/docs/guides/v2.md
+++ b/docs/guides/v2.md
@@ -39,9 +39,9 @@ v1 and v2 will both receive weekly releases occurring every Tuesday morning.
 | EmptyState                | View changes [here](#emptystate)       |
 | ExportModal               | No API changes.                        |
 | ExpressiveCard            | View changes [here](#expressivecard)   |
-| HTTPError403              | No API changes.                        |
-| HTTPError404              | No API changes.                        |
-| HTTPErrorOther            | No API changes.                        |
+| HTTPError403              | View changes [here](#fullpageerror)    |
+| HTTPError404              | View changes [here](#fullpageerror)    |
+| HTTPErrorOther            | View changes [here](#fullpageerror)    |
 | ImportModal               | No API changes.                        |
 | InlineEdit                | View changes [here](#inlineedit)       |
 | ModifiedTabs              | This component is deprecated in v2     |
@@ -107,6 +107,11 @@ v1 and v2 will both receive weekly releases occurring every Tuesday morning.
 ### ExpressiveCard
 
 - `pictogram` can now be either a function or object.
+
+### FullPageError
+
+- `HTTPError403`,`HTTPError404`, `HTTPErrorOther` have been deprecated, and is
+  been replaced by `FullPageError`
 
 ### IconButtonBar
 
