chore(FullPageError): enabled code example in story docs

--- a/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
+++ b/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
@@ -55,7 +55,7 @@ broken links.
 
 ## Code sample
 
-{/* <CodesandboxLink exampleDirectory="FullPageError" /> */}
+<CodesandboxLink exampleDirectory="FullPageError" />
 
 ## Component API
 
