chore: update docs

--- a/docs/guides/v2.md
+++ b/docs/guides/v2.md
@@ -113,6 +113,13 @@ v1 and v2 will both receive weekly releases occurring every Tuesday morning.
 - `HTTPError403`,`HTTPError404`, `HTTPErrorOther` have been deprecated, and is
   been replaced by `FullPageError`
 
+- `errorCodeLabel` --> `label`
+
+- `links` prop is removed and they need to be passed as children instead of a
+  prop
+
+- New `kind` prop: `'404', '403', 'custom'`
+
 ### IconButtonBar
 
 - The IconButtonBar is removed in V2 as the existing ActionBar is a viable
