--- a/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
+++ b/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
@@ -15,6 +15,12 @@ import * as UserAvatarStories from './UserAvatar.stories';
 
 {/* TODO: Overview. */}
 
+## Note on theming
+
+The user avatar supports all the 4 theme variants from carbon (white, g10, g90 and g100).
+The backgroundColor and font color will adapt dynamically based on the lighter and darker themes.
+
+
 ## Example usage
 
 {/* TODO: One example per designed use case. */}
