--- a/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
@@ -12,6 +12,11 @@ import * as DecoratorSingleButtonStories from './DecoratorSingleButton.stories';
 - [Example setLabelTitle()](#example-setlabeltitle)
 - [Component API](#component-api)
 
+## Deprecated
+
+> This component is deprecated and will be removed in the next major version.
+
+
 ## Overview
 
 The DecoratorSingleButton groups a key/value pair to look and behave like a
