--- a/packages/ibm-products/src/components/Nav/Nav.mdx
+++ b/packages/ibm-products/src/components/Nav/Nav.mdx
@@ -11,6 +11,10 @@ import * as NavStories from './Nav.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
+## Deprecated
+
+> This component is deprecated and will be removed in the next major version.
+
 ## Overview
 
 {/* TODO: Overview. */}
