--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordion/FilterPanelAccordion.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordion/FilterPanelAccordion.mdx
@@ -11,6 +11,11 @@ import * as FilterPanelAccordionStories from './FilterPanelAccordion.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
+## Deprecated
+
+> This component is deprecated and will be removed in the next major version.
+
+
 ## Overview
 
 The `FilterPanelAccordion` is a container required for grouping
