--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordionItem/FilterPanelAccordionItem.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordionItem/FilterPanelAccordionItem.mdx
@@ -12,6 +12,11 @@ import * as FilterPanelAccordionItemStories from './FilterPanelAccordionItem.sto
 - [Truncated usage](#truncated-usage)
 - [Component API](#component-api)
 
+## Deprecated
+
+> This component is deprecated and will be removed in the next major version.
+
+
 ## Overview
 
 The `FilterPanelAccordionItem` can be expanded and collapsed and will accept any
