chore: change deprecation notice heading

--- a/packages/ibm-products/src/components/DecoratorDualButton/DecoratorDualButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorDualButton/DecoratorDualButton.mdx
@@ -12,7 +12,7 @@ import * as DecoratorDualButtonStories from './DecoratorDualButton.stories';
 - [Example setLabelTitle()](#example-setlabeltitle)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
