--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
@@ -10,7 +10,7 @@ import * as StatusIndicatorStories from './StatusIndicator.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
