--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
@@ -10,7 +10,7 @@ import * as StatusIndicatorStepStories from './StatusIndicatorStep.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
