--- a/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
@@ -12,7 +12,7 @@ import * as DecoratorSingleButtonStories from './DecoratorSingleButton.stories';
 - [Example setLabelTitle()](#example-setlabeltitle)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
