--- a/packages/ibm-products/src/components/DescriptionList/DescriptionList.mdx
+++ b/packages/ibm-products/src/components/DescriptionList/DescriptionList.mdx
@@ -11,7 +11,7 @@ import * as DescriptionListStories from './DescriptionList.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
