--- a/packages/ibm-products/src/components/Nav/Nav.mdx
+++ b/packages/ibm-products/src/components/Nav/Nav.mdx
@@ -11,7 +11,7 @@ import * as NavStories from './Nav.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
