chore: change headind to Deprecation notice

--- a/packages/ibm-products/src/components/FilterPanel/FilterPanel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanel.mdx
@@ -11,7 +11,7 @@ import * as FilterPanelStories from './FilterPanel.stories';
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
