--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordionItem/FilterPanelAccordionItem.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordionItem/FilterPanelAccordionItem.mdx
@@ -12,7 +12,7 @@ import * as FilterPanelAccordionItemStories from './FilterPanelAccordionItem.sto
 - [Truncated usage](#truncated-usage)
 - [Component API](#component-api)
 
-## Deprecated
+## Deprecation notice
 
 > This component is deprecated and will be removed in the next major version.
 
