fix: converted to ts

--- a/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
+++ b/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
@@ -14,7 +14,7 @@ import * as BigNumbersStories from './BigNumbers.stories';
 ## Overview
 
 BigNumbers is used to display large values in a small area. The display of
-values can be the value itself, or grouped in a numerator / denominator fashion.
+values can be the value itself, or grouped in a `numerator/denominator` fashion.
 Control over the total fraction decimals displayed as well as how the
 values/totals are displayed are done via a locale prop. Other optional props
 allow control over size, truncation, if the value is a percentage, the addition
@@ -31,12 +31,6 @@ of a button as well as tool tip functionality. The default locale is English
 
 <Canvas>
   <Story of={BigNumbersStories.bigNumbers} />
-</Canvas>
-
-### Big numbers with edit button
-
-<Canvas>
-  <Story of={BigNumbersStories.withEditButton} />
 </Canvas>
 
 ## Code sample
