--- a/packages/ibm-products-web-components/src/components/side-panel/side-panel.mdx
+++ b/packages/ibm-products-web-components/src/components/side-panel/side-panel.mdx
@@ -6,6 +6,12 @@ import * as SidePanelStories from './side-panel.stories';
 
 # SidePanel
 
+> 💡 Check our
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/side-panel)
+> example implementation.
+
+[![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/side-panel)
+
 Side panels keep users in-context of a page while performing tasks like
 navigating, editing, viewing details, or configuring something new.
 
