--- a/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.mdx
+++ b/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.mdx
@@ -6,6 +6,12 @@ import * as TearsheetStories from './tearsheet.stories';
 
 # Tearsheet
 
+> 💡 Check our
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/tearsheet)
+> example implementation.
+
+[![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/tearsheet)
+
 Tearsheets keep users in-context of a page while performing tasks like
 navigating, editing, viewing details, or configuring something new.
 
