--- a/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.mdx
+++ b/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.mdx
@@ -31,7 +31,7 @@ import '@carbon/ibm-products-web-components/es/components/full-page-error/index.
   description="The page you requested has moved or is unavailable, or the specified URL is not valid. Please check the URL or search the site for the requested content."
   kind="404"
 >
-  <!-- Pass any content you want to didplay to the user here -->
+  <!-- Pass any content you want to display to the user here -->
   <a class="cds--link" href="#">– Forwarding link 1</a>
   <br />
   <a class="cds--link" href="#">– Forwarding link 2</a>
