--- a/packages/ibm-products-web-components/src/components/about-modal/about-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/about-modal/about-modal.mdx
@@ -4,9 +4,15 @@ import * as AboutModalStories from './about-modal.stories';
 
 <Meta of={AboutModalStories} />
 
-# Tearsheet
+# About Modal
 
-Tearsheets keep users in-context of a page while performing tasks like
+> 💡 Check our
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/about-modal)
+> example implementation.
+
+[![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/about-modal)
+
+About Modal keep users in-context of a page while performing tasks like
 navigating, editing, viewing details, or configuring something new.
 
 ## Getting started
