feat(About Modal): update doc

--- a/packages/ibm-products-web-components/src/components/about-modal/about-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/about-modal/about-modal.mdx
@@ -4,7 +4,7 @@ import * as AboutModalStories from './about-modal.stories';
 
 <Meta of={AboutModalStories} />
 
-# About Modal
+# AboutModal
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/about-modal)
@@ -12,7 +12,7 @@ import * as AboutModalStories from './about-modal.stories';
 
 [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/about-modal)
 
-About Modal keep users in-context of a page while performing tasks like
+About Modals keep users in-context of a page while performing tasks like
 navigating, editing, viewing details, or configuring something new.
 
 ## Getting started
