--- a/packages/ibm-products/src/components/DataSpreadsheet/DataSpreadsheet.mdx
+++ b/packages/ibm-products/src/components/DataSpreadsheet/DataSpreadsheet.mdx
@@ -5,6 +5,8 @@ import * as stories from './DataSpreadsheet.stories';
 
 # DataSpreadsheet
 
+[DataSpreadsheet usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/data-spreadsheet/usage/)
+
 ## Table of Contents
 
 - [Overview](#overview)
