--- a/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
+++ b/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
@@ -5,6 +5,8 @@ import * as stories from './GetStartedCard.stories';
 
 # GetStartedCard
 
+[Onboarding overview](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/overview/)
+
 ## Table of Contents
 
 - [Overview](#overview)
