--- a/packages/ibm-products/src/components/InterstitialScreenViewModule/InterstitialScreenViewModule.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenViewModule/InterstitialScreenViewModule.mdx
@@ -5,6 +5,8 @@ import * as stories from './InterstitialScreenViewModule.stories';
 
 # InterstitialScreenViewModule
 
+[InterstitialScreen overview](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
+
 ## Table of Contents
 
 - [Overview](#overview)
