--- a/packages/ibm-products/src/components/Saving/Saving.mdx
+++ b/packages/ibm-products/src/components/Saving/Saving.mdx
@@ -7,7 +7,7 @@ import * as stories from './Saving.stories';
 
 # Saving
 
-[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/saving/usage/)
+[Saving usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/save/usage/)
 
 ## Manual type
 
