--- a/packages/ibm-products/src/components/ScrollGradient/ScrollGradient.mdx
+++ b/packages/ibm-products/src/components/ScrollGradient/ScrollGradient.mdx
@@ -6,6 +6,8 @@ import * as ScrollGradientStories from './ScrollGradient.stories';
 
 # ScrollGradient
 
+[Scrolling overview](https://pages.github.ibm.com/carbon/ibm-products/components/datagrid/scrolling/usage/)
+
 ## Table of Contents
 
 - [Overview](#overview)
