--- a/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
+++ b/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
@@ -5,6 +5,8 @@ import * as SearchBarStories from './SearchBar.stories';
 
 # SearchBar
 
+[Carbon Search pattern](https://carbondesignsystem.com/patterns/search-pattern/)
+
 ## Table of Contents
 
 - [Overview](#overview)
