--- a/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
+++ b/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
@@ -5,6 +5,8 @@ import * as UserAvatarStories from './UserAvatar.stories';
 
 # UserAvatar
 
+[UserAvatar usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/user-avatar/usage/)
+
 ## Table of Contents
 
 - [Overview](#overview)
@@ -13,10 +15,11 @@ import * as UserAvatarStories from './UserAvatar.stories';
 
 ## Overview
 
-User avatars are a representation of a user or group of users. They can be used to identify a user or indicate collaborators.
-By default the component will display `name` on a 'order-1-cyan' background if name exist else it will render a user icon. 
-UserAvatar allows an image of the user to be displayed by passing in the `image` prop as well as customizing icons using `renderIcon` prop. 
-
+User avatars are a representation of a user or group of users. They can be used
+to identify a user or indicate collaborators. By default the component will
+display `name` on a 'order-1-cyan' background if name exist else it will render
+a user icon. UserAvatar allows an image of the user to be displayed by passing
+in the `image` prop as well as customizing icons using `renderIcon` prop.
 
 ## Migration from `UserProfileImage`
 
@@ -41,9 +44,9 @@ table below to see the new specifications.
 
 ## Note on theming
 
-The user avatar supports all the 4 theme variants from carbon (white, g10, g90 and g100).
-The backgroundColor and font color will adapt dynamically based on the lighter and darker themes.
-
+The user avatar supports all the 4 theme variants from carbon (white, g10, g90
+and g100). The backgroundColor and font color will adapt dynamically based on
+the lighter and darker themes.
 
 ## Example usage
 
