--- a/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
+++ b/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
@@ -4,6 +4,8 @@ import * as stories from './DragAndDrop.stories';
 
 # Drag and drop
 
+[Drag and drop usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/drag-and-drop/usage/)
+
 ## Table of Contents
 
 - [Overview](#overview)
@@ -20,10 +22,10 @@ customizing the order of columns in the Datagrid.
 
 {/* We do provide styles for some of the drag states as detailed below. */}
 
-{/* |                        | State                                     | class |
-| ---------------------- | ----------------------------------------- | ----- |
-| Default draggable item | `${pkg.prefix}__draggable-item`           |
-| Dragging               | `${pkg.prefix}__draggable-item--dragging` |       | */}
+{/* |                        | State                                     | class | */}
+{/* | ---------------------- | ----------------------------------------- | ----- | */}
+{/* | Default draggable item | `${pkg.prefix}__draggable-item`           |       | */}
+{/* | Dragging               | `${pkg.prefix}__draggable-item--dragging` |       | */}
 
 ## Example usage
 
