--- a/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
@@ -5,6 +5,8 @@ import * as stories from './InterstitialScreenView.stories';
 
 # InterstitialScreenView
 
+[InterstitialScreen overview](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
+
 ## Table of Contents
 
 - [Overview](#overview)
