--- a/packages/ibm-products/src/components/TagSet/TagSet.mdx
+++ b/packages/ibm-products/src/components/TagSet/TagSet.mdx
@@ -6,6 +6,10 @@ import * as stories from './TagSet.stories';
 # TagSet
 
 [TagSet usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/tag-set/usage/)
+|
+[Carbon Tag usage guidelines](https://carbondesignsystem.com/components/tag/usage/)
+|
+[Carbon Tag documentation](https://react.carbondesignsystem.com/?path=/docs/components-tag--overview)
 
 ## Table of Contents
 
