fix(web components): update doc for tearsheet and about modal

--- a/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.mdx
+++ b/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.mdx
@@ -12,8 +12,9 @@ import * as TearsheetStories from './tearsheet.stories';
 
 [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/tearsheet)
 
-Tearsheets keep users in-context of a page while performing tasks like
-navigating, editing, viewing details, or configuring something new.
+A tearsheet is a mostly full-screen type of dialog that keeps users in-context and focused by bringing actionable content front and center while revealing parts of the UI behind it. There is also a narrow variant of the tearsheet.
+
+A tearsheet comprises up to 5 zones, allowing for flexibility depending on the content: a heading area including a title, an optional navigation area that sits just below the heading, an optional influencer which is a side panel on either the left or right side, the main content area, and a set of action buttons.
 
 ## Getting started
 
