--- a/packages/ibm-products-web-components/src/components/about-modal/about-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/about-modal/about-modal.mdx
@@ -12,8 +12,7 @@ import * as AboutModalStories from './about-modal.stories';
 
 [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/about-modal)
 
-About Modals keep users in-context of a page while performing tasks like
-navigating, editing, viewing details, or configuring something new.
+The AboutModal component provides a way to communicate product information to users. It is triggered by a user’s action, appears on top of the main page content, and is persistent until dismissed. The purpose of this modal should be immediately apparent to the user, with a clear and obvious path to completion.
 
 ## Getting started
 
