fix: update as per comments

--- a/packages/ibm-products/src/components/InterstitialScreenViewModule/InterstitialScreenViewModule.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenViewModule/InterstitialScreenViewModule.mdx
@@ -5,7 +5,7 @@ import * as stories from './InterstitialScreenViewModule.stories';
 
 # InterstitialScreenViewModule
 
-[InterstitialScreen overview](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
+[InterstitialScreen usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
 
 ## Table of Contents
 
