--- a/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
@@ -5,7 +5,7 @@ import * as stories from './InterstitialScreenView.stories';
 
 # InterstitialScreenView
 
-[InterstitialScreen overview](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
+[InterstitialScreen usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
 
 ## Table of Contents
 
