fix(useravatar): attribute change and doc controls

--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.mdx
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.mdx
@@ -37,7 +37,7 @@ import '@carbon/ibm-products-web-components/es/components/user-avatar/index.js';
 ```html
  <c4p-user-avatar
   name= 'Thomas J. Watson'
-  backgroundColor='order-11-purple'
+  background-color='order-11-purple'
   size="lg"
   tooltip-text='TW, Thomas J. Watson user profile'
   tooltip-alignment="right"
