chore: add stackblitz examples for coachmark, inlineTip, interstitial with SteppedAnimatedMedia usage (#7023)
* chore: add a basic example

* chore: update example with stepped animated media

* chore: converting to typescript

* chore: fix

* chore: style fixes and clean up

* chore: rename folder name

* chore: create example for inline tip animation

* chore: issue fix

* chore: issue fix 2

* chore: create example for interstitial screen animation

* chore: correct patch and add children

* chore: style fix

* chore: add examples to docs page

* chore: add examples to docs page2

* Update InterstitialScreen.mdx to correct url

--- a/packages/ibm-products/src/components/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
+++ b/packages/ibm-products/src/components/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
@@ -12,6 +12,7 @@ import * as CoachmarkOverlayElementsStories from './CoachmarkOverlayElements.sto
 - [Note on theming](#note-on-theming)
 - [Example usage](#example-usage)
 - [Code Sample](#code-sample)
+- [Stackblitz example with Animated Media](#stackblitz-example-with-animated-media)
 - [Component API](#component-api)
 
 ## Overview
@@ -61,6 +62,10 @@ CoachmarkStack components.
 </Coachmark>
 
 ```
+
+## Stackblitz example with Animated Media
+[![Example with Animated media](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/CoachmarkWithAnimatedMedia)
+
 
 ## Component API
 
