--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -9,6 +9,7 @@ import { InterstitialScreen } from '.';
 - [Overview](#overview)
 - [Expected Composability](#expected-composability)
 - [About Onboarding](#about-onboarding)
+- [Stackblitz example with Animated Media](#stackblitz-example-with-animated-media)
 - [Component API](#component-api)
 
 ## Overview
@@ -55,6 +56,9 @@ explain, educate, and cultivate novice users into high-functioning power users.
   </InterstitialScreenView>
 </InterstitialScreen>
 ```
+## Stackblitz example with Animated Media
+[![Example with Animated media](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia)
+
 
 ## Component API
 
