fix(Storybook): update documentation links (#6989)
* fix: storybook documentation links

* fix: update as per comments

* fix: updates as per comments

* fix: update broken stories

* Update packages/ibm-products/src/components/TagSet/TagSet.stories.jsx

Co-authored-by: elysia <elysia.hwang@gmail.com>

* fix: import and TagSet guidelines URL

* fix: requested update

---------

Co-authored-by: elysia <elysia.hwang@gmail.com>
Co-authored-by: elysia <Elysia.Hwang@ibm.com>

--- a/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
+++ b/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
@@ -5,6 +5,8 @@ import * as stories from './GetStartedCard.stories';
 
 # GetStartedCard
 
+[Get started card usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/onboarding-flows/orientation/#get-started-card)
+
 ## Table of Contents
 
 - [Overview](#overview)
