--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -4,6 +4,8 @@ import { InterstitialScreen } from '.';
 
 # InterstitialScreen
 
+[InterstitialScreen usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/)
+
 ## Table of Contents
 
 - [Overview](#overview)
